--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -36,3 +36,14 @@ body{
     color: red;
     display: none;
 }
+
+#spinner{
+    width: 3%;
+    display: none;
+}
+
+#frase-id{
+    margin-left: 1%;
+    font-size: 1.24em;
+    width: 8%;
+}
