--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -9,6 +9,15 @@
     text-align: left;
 }
 
+.noSeletor{
+   -webkit-touch-callout: none;
+   -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}/* impede de selecionar para evitar copy/paste */
+
 .campo-desativado{background-color: lightgray;}
 
 .icones{vertical-align: middle;}
@@ -46,4 +55,8 @@ body{
     margin-left: 1%;
     font-size: 1.24em;
     width: 8%;
+}
+
+#botao-sync{
+    float: right;
 }
