--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -74,3 +74,12 @@ body{
     width: 30em;
     vertical-align: middle;
 }
+
+#my-info{
+    font-size: 1.5em;
+}
+
+.fa-github{
+    color: black;
+    font-size: 1.5em;
+}
